--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,6 +10,10 @@
   margin: 1em 0;
 }
 
+.room img {
+  transition: .3s filter linear;
+}
+
 .room img.light {
   filter: drop-shadow(0px 0px 7px #fff200);
 }
