--- a/src/app/light/light.component.css
+++ b/src/app/light/light.component.css
@@ -1,9 +1,23 @@
+i {
+  transition: .2s color linear, .2s filter linear;
+}
+
+:host>div {
+  transition: .1s box-shadow linear, .1s background-color linear;
+}
+
+:host>div:active {
+  box-shadow: 0px 0px 20px #888;
+  background-color: rgba(255, 255, 255, .1);
+}
+
 .icon {
   margin: .3em;
 }
 
 .light i {
   color: yellow;
+  filter: drop-shadow(0px 0px 7px #fff200);
 }
 
 :host>div {
