--- a/src/app/light/light.component.html
+++ b/src/app/light/light.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" [class.light]="isOn()">
+<div fxLayout="row" [class.light]="isOn()" class="main">
   <div (click)="toggleOnOff()" (dblclick)="toggleFullWhite()" fxLayout="column" fxLayoutAlign="center center" class="main-button">
     <i class="fas fa-lightbulb fa-3x icon"></i>
     <div class="label">{{device.label}}</div>
