feat(layout): Change room layout and add widgets  - New config files. Now 2 files (devices and layout)  - More space on room layout  - New widgets     - value     - light (width)     - button  - widget configuration (WIP):     - value (icon, unit, border)     - button (icon)  - Bigger room images, moved to a didicated folder and names now in english  - New background for room layout (annimation issue !)
TODO :
 - Class for widgets configuration and css ?
 - Service or configuration file for widget associations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   <div fxFlex [@routerTransition]="getState(o)" class="body">
     <router-outlet #o="outlet"></router-outlet>
   </div>
-  <mat-toolbar>
+  <!-- <mat-toolbar>
     <mat-toolbar-row fxLayoutAlign="center center" class="footer">
       <button mat-button (click)="viewConfig = !viewConfig">
           <i class="fas fa-code fa-2x"></i>
@@ -23,7 +23,7 @@
           <i class="fas fa-moon fa-2x"></i>
       </button>
     </mat-toolbar-row>
-  </mat-toolbar>
+  </mat-toolbar> -->
 </div>
 <div *ngIf="viewConfig" class="config">
   <pre [innerHtml]="cs.config | prettyjson:3"></pre>
