--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<div fxLayoutAlign="center start" fxFlex>
-  <div fxLayout="row wrap" fxLayoutAlign="space-around" class="rooms">
+<div fxFlex fxLayout="row wrap" fxLayoutAlign="center space-around" class="rooms">
+  <!-- <div fxLayout="row wrap" fxLayoutAlign="space-around" class="rooms"> -->
     <div *ngFor="let room of getRooms()" fxFlex="33" class="room" fxLayout="column" fxLayoutAlign="start center">
-      <div class="main" fxLayout="column" fxLayoutAlign="center center" routerLink="/room/{{room.id}}">
+      <div class="main" fxLayout="column" fxLayoutAlign="center center" routerLink="/bigroom/{{room.id}}">
         <div class="label">{{room.label}}</div>
-        <img src="/assets/images/{{room.icon}}.png" [class.light]="hasLight(room)">
+        <img src="/assets/images/rooms/{{room.icon}}.png" [class.light]="hasLight(room)">
         <div *ngIf="room.sensors?.Sensor?.properties?.Temperature" class="temperature" fxLayoutAlign="end center">
           <img src="/assets/images/icon_temp.png"> {{room.sensors.Sensor.properties.Temperature.value | number:'1.0-0'}} °C
         </div>
@@ -12,5 +12,5 @@
         <app-light-small *ngFor="let device of getDevices(room)" [device]="device"></app-light-small>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
