--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,15 +1,16 @@
 :host {
-  height: 100%;
+  /* height: 100%; */
   display: block;
 }
 
 .rooms {
   width: 100%;
 
-  background-image: url("/assets/images/background.png");
+  /* background-image: url("/assets/images/background.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+  /* background-attachment: fixed; */
 }
 
 .room {
