--- a/src/app/widget-value/widget-value.component.css
+++ b/src/app/widget-value/widget-value.component.css
@@ -2,7 +2,7 @@
   display: block;
   box-sizing: border-box;
   border-radius: 4px;
-  border: solid 1px #699fae;
+  border: solid 1px rgba(105, 159, 174, .5);
   padding: .7em;
   width: 100%;
   transition: .1s box-shadow linear, .1s background-color linear;
