--- a/src/app/big-room/big-room.component.html
+++ b/src/app/big-room/big-room.component.html
@@ -1,9 +1,9 @@
 <div class="container" fxLayout="column" *ngIf="cs.layout.rooms[roomId]">
   <div fxLayout="row" class="row">
     <div class="area area-top area-A" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [device]="cs.devices[widget.device]" [widget]="widget.widget"
+      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [device]="cs.devices[widget.device]" [widget]="widget.widget"
         [config]="widget.config">
-      </app-widget>
+      </app-widget-outlet>
     </div>
 
     <div class="area-center infos" fxLayout="column" fxLayoutAlign="end center">
@@ -12,22 +12,22 @@
     </div>
 
     <div class="area area-top area-B" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget *ngFor="let widget of cs.layout.rooms[roomId].layout.areaB" [device]="cs.devices[widget.device]" [widget]="widget.widget"
+      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaB" [device]="cs.devices[widget.device]" [widget]="widget.widget"
         [config]="widget.config">
-      </app-widget>
+      </app-widget-outlet>
     </div>
   </div>
   <div fxLayout="row" class="row" class="bottom">
     <div class="area area-bottom area-C" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget *ngFor="let widget of cs.layout.rooms[roomId].layout.areaC" [device]="cs.devices[widget.device]" [widget]="widget.widget"
+      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaC" [device]="cs.devices[widget.device]" [widget]="widget.widget"
         [config]="widget.config">
-      </app-widget>
+      </app-widget-outlet>
     </div>
     
     <div class="area area-bottom area-D" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget *ngFor="let widget of cs.layout.rooms[roomId].layout.areaD" [device]="cs.devices[widget.device]" [widget]="widget.widget"
+      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaD" [device]="cs.devices[widget.device]" [widget]="widget.widget"
         [config]="widget.config">
-      </app-widget>
+      </app-widget-outlet>
     </div>
   </div>
 </div>
