--- a/src/app/widget-value/widget-value.component.css
+++ b/src/app/widget-value/widget-value.component.css
@@ -1,4 +1,5 @@
 :host {
+  width: 100%; margin-bottom: .7em;
   display: block;
   box-sizing: border-box;
   border-radius: 4px;
@@ -7,7 +8,6 @@
   width: 100%;
   transition: .1s box-shadow linear, .1s background-color linear;
 }
-
 
 .main {
   font-size: 1.2em;
