feat(config): Change layout.json name

--- a/src/app/widget-value/widget-value.component.html
+++ b/src/app/widget-value/widget-value.component.html
@@ -3,9 +3,9 @@
     <div>
       <i class="{{getIcon()}} icon"></i>
     </div>
-    <div fxFlex>{{config.label || device.label}}</div>
+    <div fxFlex>{{config?.label || device.label || ''}}</div>
   </div>
   <div>
-    {{device.properties[config.property].value}} {{config.unit || ''}}
+    {{device.properties[config?.property]?.value}} {{config?.unit || ''}}
   </div>
 </div>
