--- a/src/app/widget-switch/widget-switch.component.css
+++ b/src/app/widget-switch/widget-switch.component.css
@@ -9,11 +9,27 @@
   transition: .1s box-shadow linear, .1s background-color linear;
 }
 
+:host:active {
+  box-shadow: 0px 0px 20px #888;
+  background-color: rgba(255, 255, 255, .1);
+}
+
 .main {
   font-size: 1.2em;
+}
+
+.ON i {
+  color: #00ff00;
+  filter: drop-shadow(0px 0px 7px #00ff00);
+}
+
+.OFF i {
+  color: #940000;
+  filter: drop-shadow(0px 0px 7px #940000);
 }
 
 .main i {
   padding: 0 .5em;
   margin-right: .5em;
+  transition: .2s color linear, .2s filter linear;
 }
