feat(alerts): Add alerts page  - add alerts for battery level

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
       <button (click)="nightMode()" fxLayoutAlign="center center">
           <i class="fas fa-moon fa-2x"></i>
       </button>
+      <button fxLayoutAlign="center center" routerLink="/alerts">
+        <i class="fas fa-bell fa-2x"></i>
+      </button>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
