--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -1,6 +1,8 @@
-<div>
+<div class="alerts">
   <div *ngFor="let alert of logService.alertsLogs" fxLayout="row" fxLayoutAlign="start center" class="alert">
-    <div><i class="fas fa-{{alert.type}} fa-2x"></i></div>
+    <div>
+      <i class="fas fa-{{alert.type}} fa-2x"></i>
+    </div>
     <div fxLayout="column" fxFlex class="description">
       <div>[{{alert.property}}] {{configService.devices[alert.device].label}}</div>
       <div class="device">{{alert.device}}</div>
