--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,34 +8,14 @@
   font-size: 1.5em;
 }
 
-
 .mat-toolbar {
   background-color: #000;
   color: #c6c6c6;
   border-bottom: solid 1px #172d33;
-}
-
-/* .toolbar { */
-  /* background-color: #000;
-  color: #c6c6c6;
-  border-bottom: solid 1px #172d33; */
-  /* min-height: 64px; */
-  /* font: 500 20px/32px Roboto,"Helvetica Neue",sans-serif;
-  padding: 0 16px; */
-/* } */
-
-.config {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #222;
-  overflow: auto;
+  z-index: 2;
 }
 
 .body {
-  /* overflow-y: auto; */
   overflow-y: hidden;
 }
 
