--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,16 +1,12 @@
 :host {
-  /* height: 100%; */
+  height: 100%;
   display: block;
 }
 
 .rooms {
   width: 100%;
-
-  /* background-image: url("/assets/images/background.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
-  /* background-attachment: fixed; */
+  height: 100%;
+  overflow-y: auto;
 }
 
 .room {
