--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,8 +37,14 @@
   line-height: 36px;
   color: rgb(198, 198, 198);
   min-width: 88px;
+  transition: .1s box-shadow linear, .1s background-color linear;
 }
 
 .footer button:first-child {
   border-left: solid 1px #42616b;
+}
+
+.footer button:active {
+  box-shadow: 0px 0px 20px #888;
+  background-color: rgba(255, 255, 255, .1);
 }
