feat(items): Get items list and values from server and configure widgets from items  - Widgets are no longer configured by devices but by items  - Device concept no longer exists  - Items/Device list is not needed anymore

--- a/src/app/hacker/hacker.component.html
+++ b/src/app/hacker/hacker.component.html
@@ -4,7 +4,7 @@
       <pre [innerHtml]="cs.layout | prettyjson:1"></pre>
     </div>
     <div fxLayout="column" class="box" fxFlex="50">
-      <pre [innerHtml]="cs.devices | prettyjson:1"></pre>
+      <pre [innerHtml]="cs.items | prettyjson:1"></pre>
     </div>
   </div>
   <div class="box logs" fxLayout="column" fxFlex>
