--- a/src/app/widget-button/widget-button.component.html
+++ b/src/app/widget-button/widget-button.component.html
@@ -3,6 +3,6 @@
     <div>
       <i  class="{{getIcon()}} icon"></i>
     </div>
-    <div fxFlex>{{config?.label || device?.label || ''}}</div>
+    <div fxFlex>{{config?.label || ''}}</div>
   </div>
 </div>
