--- a/src/app/screen-light/screen-light.component.html
+++ b/src/app/screen-light/screen-light.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" [class.light]="isOn()" fxLayoutAlign="start center">
   <div fxFlex (click)="toggleOnOff()" class="main">
     <div><i class="fas fa-lightbulb icon"></i></div>
-    <div fxFlex>{{device.label}}</div>
+    <div fxFlex>{{config.label || ''}}</div>
   </div>
-  <div *ngIf="device.properties.Color || device.properties.Brightness" (click)="openAdvanced()" class="more">More</div>
+  <div *ngIf="items.Color || items.Brightness" (click)="openAdvanced()" class="more">More</div>
 </div>
