--- a/src/app/widget-switch/widget-switch.component.html
+++ b/src/app/widget-switch/widget-switch.component.html
@@ -1,8 +1,8 @@
-<div fxLayout="row" fxLayoutAlign="start center" class="{{device.properties.OnOff.value}}">
+<div fxLayout="row" fxLayoutAlign="start center" class="{{item.state}}">
   <div fxFlex (click)="toggleOnOff()" class="main">
     <div>
       <i class="{{getIcon()}} icon"></i>
     </div>
-    <div fxFlex>{{config?.label || device?.label || ''}}</div>
+    <div fxFlex>{{config?.label || ''}}</div>
   </div>
 </div>
