fix(alert): Fix alerts pages and logs

--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -4,8 +4,8 @@
       <i class="fas fa-{{alert.type}} fa-2x"></i>
     </div>
     <div fxLayout="column" fxFlex class="description">
-      <div>[{{alert.property}}] {{configService.devices[alert.device].label}}</div>
-      <div class="device">{{alert.device}}</div>
+      <div>{{alert.item}}</div>
+      <!-- <div class="device">{{alert.device}}</div> -->
     </div>
     <div class="value">{{alert.value}}</div>
   </div>
