--- a/src/app/light/light.component.css
+++ b/src/app/light/light.component.css
@@ -1,37 +1,35 @@
-i {
-  transition: .2s color linear, .2s filter linear;
-}
-
-:host>div {
+:host {
+  width: 100%; margin-bottom: .7em;
+  display: block;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: solid 1px rgba(105, 159, 174, .5);
+  padding: .7em;
+  width: 100%;
   transition: .1s box-shadow linear, .1s background-color linear;
 }
 
-:host>div:active {
+:host:active {
   box-shadow: 0px 0px 20px #888;
   background-color: rgba(255, 255, 255, .1);
 }
 
-.icon {
-  margin: .3em;
+.main {
+  font-size: 1.2em;
+}
+
+.main i {
+  padding: 0 .5em;
+  margin-right: .5em;
+  transition: .2s color linear, .2s filter linear;
+}
+
+.more {
+  padding-left: .7em;
+  border-left: solid 1px #699fae;
 }
 
 .light i {
   color: yellow;
   filter: drop-shadow(0px 0px 7px #fff200);
-}
-
-:host>div {
-  border: solid 1px #699fae;
-  border-radius: 5px;
-}
-
-.main-button {
-  padding: 1.2em;
-}
-
-.more {
-  padding: 2em;
-  background-color: rgba(21, 31, 37, .5);
-  border: solid 1px #11181a; 
-  border-radius: 0px 5px 5px 0px;
 }
