--- a/src/app/light/light.component.html
+++ b/src/app/light/light.component.html
@@ -1,9 +1,7 @@
-<div fxLayout="row" [class.light]="isOn()">
-  <div (click)="toggleOnOff()" fxLayout="column" fxLayoutAlign="center center" class="main-button">
-    <i class="fas fa-lightbulb fa-3x icon"></i>
-    <div class="label">{{device.label}}</div>
+<div fxLayout="row" [class.light]="isOn()" fxLayoutAlign="start center">
+  <div fxFlex (click)="toggleOnOff()" class="main">
+    <div><i class="fas fa-lightbulb icon"></i></div>
+    <div fxFlex>{{config.label || ''}}</div>
   </div>
-  <div fxLayoutAlign="center center" fxLayout="column" class="more" *ngIf="device.properties.Color || device.properties.Brightness" (click)="openAdvanced()">
-      More
-  </div>
+  <div *ngIf="items.Color || items.Brightness" (click)="openAdvanced()" class="more">More</div>
 </div>
