--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -1,30 +1,50 @@
 :host {
   height: 100%;
+  display: block;
 }
 
-.header {
-  margin: 2em 0;
+.container {
+  background-image: url("/assets/images/background2.png");
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: calc(100vh - 130px);
+  width: 100%;
+
+  transition: background-image 1s ease-in-out;
 }
 
-.header .label {
+.row {
+  height: 50%;
+}
+
+.infos {
+  margin-bottom: -86px;
+}
+
+.infos .label {
   margin-bottom: 1em;
   font-size: 1.17em;
 }
 
-.devices {
+.area {
+  overflow-y: auto;
   padding: 1em;
 }
 
-.device {
-  margin: 1em;
+.area-top {
+  padding-bottom: 40px;
 }
 
-.sensor {
-  font-size: 2.3em;
+.area-bottom {
+  padding-top: 45px;
 }
 
-.sensor i {
-  margin-right: .3em;
-  font-size: 1.5em;
-  filter: drop-shadow(0px 0px 2px #8fd3e6);
+.area-C {
+  padding-right: 110px;
+}
+
+.area-D {
+  padding-left: 110px;
 }
