feat(settings): First test on Settings page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
       <button fxLayoutAlign="center center" routerLink="/">
         <i class="fas fa-home fa-2x"></i>
       </button>
+      <button fxLayoutAlign="center center" routerLink="/video-chat">
+        <i class="fas fa-video fa-2x"></i>
+      </button>
       <button fxLayoutAlign="center center" routerLink="/hacker">
           <i class="fas fa-code fa-2x"></i>
       </button>
@@ -26,6 +29,9 @@
       </button>
       <button fxLayoutAlign="center center" routerLink="/alerts">
         <i class="fas fa-bell fa-2x"></i>
+      </button>
+      <button fxLayoutAlign="center center" routerLink="/settings">
+        <i class="fas fa-cogs fa-2x"></i>
       </button>
     </mat-toolbar-row>
   </mat-toolbar>
