refactor(modules): Add every widget in a module and new shared module for config and api  - + Delete old widgets not used anymore  - Every widget is now in a didicated module in the widgets folder  - Api and config services are in a shared module

--- a/src/app/settings/manage-room/manage-room.component.html
+++ b/src/app/settings/manage-room/manage-room.component.html
@@ -1,8 +1,8 @@
 <div class="container" fxLayout="column" *ngIf="cs.layout.rooms[roomId]">
   <div fxLayout="row" class="row">
     <div class="area area-top area-A" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [widget]="widget">
-      </app-widget-outlet>
+      <app-widget-outlet-settings *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [widget]="widget">
+      </app-widget-outlet-settings>
     </div>
 
     <div class="area-center infos" fxLayout="column" fxLayoutAlign="end center">
@@ -11,19 +11,19 @@
     </div>
 
     <div class="area area-top area-B" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaB" [widget]="widget">
-      </app-widget-outlet>
+      <!-- <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaB" [widget]="widget">
+      </app-widget-outlet> -->
     </div>
   </div>
   <div fxLayout="row" class="row">
     <div class="area area-bottom area-C" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaC" [widget]="widget">
-      </app-widget-outlet>
+      <!-- <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaC" [widget]="widget">
+      </app-widget-outlet> -->
     </div>
 
     <div class="area area-bottom area-D" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaD" [widget]="widget">
-      </app-widget-outlet>
+      <!-- <app-widget-outlet *ngFor="let widget of cs.layout.rooms[roomId].layout.areaD" [widget]="widget">
+      </app-widget-outlet> -->
     </div>
   </div>
 </div>
