--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -1,6 +1,7 @@
 <div fxLayou="row">
   <a routerLink="./">Settings</a>
   <a routerLink="./layout">Layout</a>
+  <a routerLink="./room/LivingRoom">LivingRoom</a>
   <a routerLink="./room/Bathroom">Bathroom</a>
 </div>
 <router-outlet></router-outlet>
