--- a/src/app/settings/manage-room/manage-room.component.html
+++ b/src/app/settings/manage-room/manage-room.component.html
@@ -1,8 +1,11 @@
 <div class="container" fxLayout="column" *ngIf="cs.layout.rooms[roomId]">
   <div fxLayout="row" class="row">
     <div class="area area-top area-A" fxFlex fxLayoutAlign="start center" fxLayout="column">
-      <app-widget-outlet-settings *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [widget]="widget">
-      </app-widget-outlet-settings>
+      <!-- <app-widget-outlet-settings *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" [widget]="widget" (click)="openConfig(widget)">
+      </app-widget-outlet-settings> -->
+      <div class="widget " *ngFor="let widget of cs.layout.rooms[roomId].layout.areaA" (click)="openConfig(widget)">
+        {{widget.widget}} - {{widget.item}}
+      </div>
     </div>
 
     <div class="area-center infos" fxLayout="column" fxLayoutAlign="end center">
