--- a/src/app/widgets/widget-button/widget-button/widget-button.component.css
+++ b/src/app/widgets/widget-button/widget-button/widget-button.component.css
@@ -1,11 +1,11 @@
 :host {
-  width: 100%; margin-bottom: .7em;
+  width: 100%;
+  margin-bottom: .7em;
   display: block;
   box-sizing: border-box;
   border-radius: 4px;
   border: solid 1px rgba(105, 159, 174, .5);
   padding: .7em;
-  width: 100%;
   transition: .1s box-shadow linear, .1s background-color linear;
 }
 
