--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,12 @@
       <button fxLayoutAlign="center center" routerLink="/">
         <i class="fas fa-home fa-2x"></i>
       </button>
-      <button fxLayoutAlign="center center" routerLink="/video-chat">
+      <!-- <button fxLayoutAlign="center center" routerLink="/video-chat">
         <i class="fas fa-video fa-2x"></i>
-      </button>
+      </button> -->
+      <button fxLayoutAlign="center center" routerLink="/medias">
+        <i class="fas fa-music fa-2x"></i>
+    </button>
       <button fxLayoutAlign="center center" routerLink="/hacker">
           <i class="fas fa-code fa-2x"></i>
       </button>
