--- a/src/app/widgets/widget-music-controls-simple/widget-music-controls-simple/widget-music-controls-simple.component.css
+++ b/src/app/widgets/widget-music-controls-simple/widget-music-controls-simple/widget-music-controls-simple.component.css
@@ -1,22 +1,27 @@
 :host {
-  width: 100%; margin-bottom: .7em;
+  width: 100%;
+  margin-bottom: 0.7em;
   display: block;
   box-sizing: border-box;
   border-radius: 4px;
-  border: solid 1px rgba(105, 159, 174, .5);
-  padding: .7em;
+  border: solid 1px rgba(105, 159, 174, 0.35);
+  padding: 0.7em;
   width: 100%;
 }
 
 .control {
-  transition: .1s filter linear, .1s background-color linear;
+  transition: 0.1s filter linear, 0.1s background-color linear;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: rgba(0,0,0,.5);
 }
 
-.control:active i{
+.control:active {
   filter: drop-shadow(0px 0px 20px #888);
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
-
+/* 
 .main {
   font-size: 1.2em;
   padding-bottom: .7em;
@@ -39,4 +44,70 @@
 .more {
   padding-left: .7em;
   border-left: solid 1px #699fae;
+} */
+
+.cover {
+  width: 100px;
+  height: 100px;
+  box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.4);
+  /* padding: 5px; */
+}
+.cover-art {
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.25);
+  background: url("https://upload.wikimedia.org/wikipedia/en/6/67/Foo_Fighters_8LP_Sonic_Highways.jpg");
+  background-size: cover;
+}
+
+.playing .vinyl {
+  animation: spin 2s linear infinite;
+}
+
+.vinyl {
+  transition: all 500ms;
+	background-position: center, center;
+	background-size: cover, 40% auto;
+	background-repeat: no-repeat;
+	border-radius: 100%;
+	box-shadow: 0 0 10px rgba(0,0,0,0.8);
+	height: 100px;
+	width: 100px;
+	z-index: 5;
+  will-change: transform, left;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.infos {
+  padding-left: 2em;
+}
+
+.actions button i {
+  color: rgb(105, 159, 174);
+}
+
+.title {
+  font-size: 1.7em;
+  font-weight: 100;
+}
+.artist {
+  font-size: 1em;
+  font-weight: 100;
+  color: #999;
+}
+
+.panel {
+  min-height: 100px;
+}
+
+.duration i {
+  color: #bd2c2c;
 }
