--- a/src/app/medias/medias/medias.component.css
+++ b/src/app/medias/medias/medias.component.css
@@ -44,8 +44,12 @@
 	z-index: 10;
 }
 
-.vinyl {
+.playing .vinyl {
   animation: spin 2s linear infinite;
+  top: 0px;
+}
+
+.vinyl {
   transition: all 500ms;
 	background-position: center, center;
 	background-size: cover, 40% auto;
@@ -53,13 +57,11 @@
 	border-radius: 100%;
 	box-shadow: 0 0 10px rgba(0,0,0,0.8);
 	height: 200px;
-	/* left: 0;
-	position: absolute; */
-	/* top: 5px; */
+	position: absolute;
 	width: 200px;
 	z-index: 5;
   will-change: transform, left;
-  /* left: 50%; */
+  top: 65px;
 }
 
 .status {
@@ -68,6 +70,8 @@
   overflow-y: hidden;
   border-bottom: solid 1px rgba(54, 168, 190, .4);
   box-shadow: inset 0 -8px 8px -7px rgba(0,0,0,.8);
+  z-index: 10;
+  position: relative;
 }
 
 @keyframes spin {
