--- a/src/app/medias/medias/medias.component.html
+++ b/src/app/medias/medias/medias.component.html
@@ -12,10 +12,10 @@
     </div>
     
     <div class="controls" fxLayout="row" fxLayoutAlign="space-around center">
-      <button mat-mini-fab (click)="control('PREVIOUS')"><i class="fas fa-step-backward fa-2x"></i></button>
-      <button mat-fab (click)="control('PLAY')" *ngIf="getItemState(player.items.controls) === 'PAUSE'"><i class="fas fa-play fa-2x"></i></button> 
-      <button mat-fab (click)="control('PAUSE')" *ngIf="getItemState(player.items.controls) === 'PLAY'"><i class="fas fa-pause fa-2x"></i></button>
-      <button mat-mini-fab (click)="control('NEXT')"><i class="fas fa-step-forward fa-2x"></i></button>
+      <button mat-mini-fab (click)="control(player, 'PREVIOUS')"><i class="fas fa-step-backward fa-2x"></i></button>
+      <button mat-fab (click)="control(player, 'PLAY')" *ngIf="getItemState(player.items.controls) === 'PAUSE'"><i class="fas fa-play fa-2x"></i></button> 
+      <button mat-fab (click)="control(player, 'PAUSE')" *ngIf="getItemState(player.items.controls) === 'PLAY'"><i class="fas fa-pause fa-2x"></i></button>
+      <button mat-mini-fab (click)="control(player, 'NEXT')"><i class="fas fa-step-forward fa-2x"></i></button>
     </div>
 
     <div class="position">
@@ -23,7 +23,7 @@
       <mat-slider disabled="true" fxFill min="0" [max]="getItemState(player.items.duration).split('.')[0]" step="0.5" [value]="getItemState(player.items.currentTime)"></mat-slider>
     </div>
 
-    <div class="status" fxLayoutAlign="center start">
+    <div class="status" fxLayoutAlign="center start" [ngClass]="{'playing': getItemState(player.items.controls) === 'PLAY'}">
       <div class="vinyl" [ngStyle]="{'background-image': 'url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/vinyl.png), url(' + getItemState(player.items.imageUrl) + ')'}"></div>
     </div>
     <div class="infos">
