fix(duration): Duration value was is sec.ms, now it's in min:sec

--- a/src/app/medias/medias/medias.component.html
+++ b/src/app/medias/medias/medias.component.html
@@ -46,7 +46,7 @@
         </tr>
         <tr>
           <td class="label">Duration : </td>
-          <td class="value">{{getItemState(player.items.duration)}}</td>
+          <td class="value">{{getItemState(player.items.duration) | minuteSeconds}}</td>
         </tr>
       </table>
     </div>
